--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react-dom": "^17.0.1",
     "react-reveal": "^1.2.2",
     "react-scripts": "4.0.1",
+    "react-spring": "^8.0.27",
+    "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
